Fix “Hide on Mobile” Thumbnail Setting Not Working

--- a/packages/blocks-next/src/blocks/product-selected-variant-image/style.scss
+++ b/packages/blocks-next/src/blocks/product-selected-variant-image/style.scss
@@ -43,8 +43,10 @@
 	&:hover img {
 		transform: scale(1.05);
 	}
+}
 
-	&.hide-on-mobile {
+@media (max-width: 480px) {
+	.wp-block-surecart-product-selected-variant-image.hide-on-mobile {
 		display: none;
 	}
 }
